--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="crime_details_label">Описание</string>
     <string name="crime_date_button"/>
     <string name="crime_solved_label">Решено?</string>
+    <string name="crime_title">Criminal Intent</string>
 </resources>
